# terraform/modules/api/api.yml
@@ -346,7 +346,7 @@ paths:
               method.response.header.Access-Control-Allow-Credentials: "'true'"
   /jobs/{job_id}/download:
     get:
-      summary: Download a specific file
+      summary: Download a specific file in JSON or CSV format
       security:
         - UserPool: []
       parameters:
@@ -355,6 +355,14 @@ paths:
           required: true
           schema:
             type: string
+        - name: format
+          in: query
+          required: false
+          description: Format to download the file (json or csv)
+          schema:
+            type: string
+            enum: [json, csv]
+            default: json
       x-amazon-apigateway-integration:
         uri: arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/${lambda_arn}/invocations
         httpMethod: POST
@@ -363,6 +371,18 @@ paths:
       responses:
         "200":
           description: Successfully retrieved file
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  presigned_url:
+                    type: string
+                    description: URL to download the file
+                  format:
+                    type: string
+                    enum: [json, csv]
+                    description: Format of the file
           headers:
             Access-Control-Allow-Origin:
               schema:
